--- a/localisation/english/MD_focus_SOO_l_english.yml
+++ b/localisation/english/MD_focus_SOO_l_english.yml
@@ -72,7 +72,7 @@
  SOO_subsidise_the_Farmers_desc: "Our country is very poor, we need to use every opportunity to get income for the budget. We will try to stimulate our farmers"
  SOO_Roki_Tunnel_tollage: "Repair the Roki Tunnel"
  SOO_Roki_Tunnel_tollage_desc: "We need to repair this tunnel, because only thanks to it we have a connection with Russia"
- SOO_Tskhinvali_gas_and_electricity_network: "Energy Supply of Tskhivnali"
+ SOO_Tskhinvali_gas_and_electricity_network: "Energy Supply of Tskhinvali"
  SOO_Tskhinvali_gas_and_electricity_network_desc: "We will provide Tskhinvali with everything necessary in terms of energy"
  SOO_Move_towards_cash_crop_growth: "Increase Trade Turnover With Russia"
  SOO_Move_towards_cash_crop_growth_desc: "We are ready to increase the supply of our agricultural products to Russia"
